# moment-keeper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
data/test/: README.md
data/user-config/test/: README.md  test_config.json
docs/images/: .gitkeep
notebooks/: classement_photos.ipynb
scripts/: README.md  benchmark.py  test_limits.py
src/moment_keeper/: __init__.py  analytics.py  cli.py  config.py  config_manager.py  organizer.py  path_manager.py  photo_copier.py  theme.py  translations.py
test-data/: README.md
tests/: __init__.py  conftest.py  test_analytics.py  test_basic_features.py  test_organizer.py  test_photo_copier.py
